# gdio-py

./: .gitignore  Api.py  CHANGELOG.md  Client.py  Exceptions.py  LICENSE  Objects.py  README.md  Requests.py  Responses.py  TestScript.py  pyproject.toml  requirements.txt  requirements_dev.txt  scratch.py  server.py  setup.cfg
demo/: CustomTypes.py  TestScript.py
docs/: ApiClient_Reference.md
docs/src/: ApiClient_Docs.py
docs/src/templates/: class.md  list.md  method.md  table.md
src/_gdio/: ApiClient.py  Client.py  Enums.py  Exceptions.py  GDObjects.py  Messages.py  ProtocolObjects.py  Serializers.py  constants.py
src/gdio/: ApiClient.py  Client.py  Enums.py  Events.py  Exceptions.py  Messages.py  Objects.py  ProtocolObjects.py  Requests.py  Responses.py  Serializers.py  __main__.py  api.py  plugin.py
src/gdio/common/: exceptions.py  objects.py
tests/: TestScript.py  scratch.py  test_gdio_toolkit.py  test_implementation.py  test_integration.py  test_verify_path.py
