[metadata]
name = gdio
description = Python API of the Gamedriver ApiClient
author = Ethan Evans
platforms = unix, linux, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    gdio
install_requires =
    msgpack>=1
python_requires =
    >=3.6
package_dir =
    =src
zip_safe = no