[metadata]
name = gdio
description = Python API of the Gamedriver ApiClient
author = Ethan Evans
platforms = unix, linux, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
packages =
    gdio
install_requires =
    msgpack>=1
python_requires =
    >=3.7
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    pytest-asyncio>=0.15

    Appium-Python-Client>=1.2

[options.package_data]
gdio=py.typed

[flake8]
max-line-length=160